[package]
name = "now"
version = "0.1.0"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"
description = "a human friendly time parse lib"
license = "MIT"
repository = "https://github.com/Kilerd/now"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "my_benchmark"
harness = false


[dependencies]
chrono = "0.4.19"

[dev-dependencies]
criterion = "0.3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
