[package]
name = "now"
version = "0.1.3"
authors = ["Kilerd <blove694@gmail.com>"]
edition = "2018"
description = "a time toolkit for chrono"
license = "MIT"
repository = "https://github.com/Kilerd/now"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "my_benchmark"
harness = false


[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"]}

[dev-dependencies]
criterion = "0.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
